small_apps/credit-scoring-engine/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pe-eng-credit-scoring-engine-dev
  labels:
    app.kubernetes.io/name: credit-scoring-engine
    app.kubernetes.io/version: "3.1.0"
    app.kubernetes.io/part-of: retail-banking
    environment: dev
    managed-by: helm
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: credit-scoring-engine
    environment: dev
